Correct mobile scrolling but no envelope/account views on mobile

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -38,8 +38,9 @@ nav {
     transform: translateX(-50%);
 }
 
-.right-section-spacer {
-  width: 24px; /* Matches the width of the menu icon to keep logo perfectly centered */
+#right-section-spacer {
+  width: 24px; /* Matches the width of the hambuurger menu icon to keep logo perfectly centered */
+  height: var(--navbar-height);
 }
 
 .sidenav-trigger {
